src/test/scala/wacc/wacc_examples/invalid/semanticErr/pairs/badPairExchange.wacc
# Assignment is not legal when both sides types are not known

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

# pair(pair(int, int), int) => pair(any, int)

begin
  pair(int, int) p = newpair(4, 5);  
  pair(pair, int) q = newpair(p, 6);
  fst fst q = snd fst q
end

